--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section>
                 <img src="img/calendario2.jpg" alt="calendario">
                 <h3>Tabela de Jogos</h3>
-                <p>★ VCT ★ <br> Nosso próximo jogo é dia 12/02 contra o time: Gamelanders às 17h <br> Transmissão no canal:<a href="https://twitch.tv/valorant_Br">twitch.tv/valorant_br</a>
+                <p>★ VCT ★ <br> Nosso próximo jogo é dia 20/02 contra o time: Liberty às 17h <br> Transmissão no canal:<a href="https://twitch.tv/valorant_Br">twitch.tv/valorant_br</a>
                 <valorant_br></valorant_br></a></li></p>
                 </section>
         </section>
