--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>Sou o pANcada e bem-vindo(a) ao meu site!</p>
             <a href="#INFORMAÇÕES">role para ver mais</a>
         </header>
-        <section>
+        <section><!-- INICIO Section Informações-->
             <h2>INFORMAÇÕES</h2>
             <section>
                 <img src="img/loud 2.png" alt="icone loud">
@@ -37,7 +37,13 @@
                 <p>★ VCT ★ <br> Nosso próximo jogo é dia 20/02 contra o time: Liberty às 17h <br> Transmissão no canal:<a href="https://twitch.tv/valorant_Br">twitch.tv/valorant_br</a>
                 <valorant_br></valorant_br></a></li></p>
                 </section>
-        </section>
+        </section><!-- FIM Section Informações -->
+        <section><!-- INICIO Section Curiosidades-->
+            <h2>Curiosidades</h2>
+            <section>
+                <img src="img/pancada2.jpg" alt="pancada"width="30%" height="30%">
+            </section>
+        </section><!-- FIM Section Curiosidades-->
     </main>
     <footer>
         <div>
