--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </section><!-- FIM Section Informações -->
         <section><!-- INICIO Section Curiosidades-->
             <h2>Curiosidades</h2>
+            <p>Pancada, no valorant, faz a função de controlar, uma das mais escassas e é considerado um dos melhores do país.</p>
             <section>
                 <img src="img/pancada2.jpg" alt="pancada"width="8%" height="8%">
             </section>
