--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section>
                 <img src="img/pancada2.jpg" alt="pancada"width="8%" height="8%">
                 <h2>Curiosidades</h2>
-            <p>Pancada, no valorant, faz a função de controlar, uma das mais escassas e é considerado um dos melhores do país.</p>
+            <p>Pancada, no valorant, faz a função de controlador, uma das mais escassas e é considerado um dos melhores do país.</p>
             </section>
         </section><!-- FIM Section Curiosidades-->
     </main>
