--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <header>
             <h2>pANcada</h2>
             <p>Sou o pANcada e bem-vindo(a) ao meu site!</p>
-            <a href="#INFORMAÇÕES">role para ver mais</a>
+            <a href="#informacoes">role para ver mais</a>
         </header>
-        <section><!-- INICIO Section Informações-->
+        <section id="informacoes"><!-- INICIO Section Informações-->
             <h2>INFORMAÇÕES</h2>
             <section>
                 <img src="img/loud 2.png" alt="icone loud">
