--- a/contato.html
+++ b/contato.html
@@ -33,8 +33,11 @@
                     <input id="email" type="text" name="email">                   
                     </div>
                     <div>
-                        <label for="mensagem">Mensagem:</label><br>
+                            <label for="mensagem">Mensagem:</label><br>
                         <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+                    </div>
+                    <div>
+                        <input type="submit" value="Enviar">
                     </div>
                 </form>
             </section>
