--- a/contato.html
+++ b/contato.html
@@ -37,6 +37,9 @@
                         <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
                     </div>
                         <input type="submit" value="Enviar">
+                        <div>
+                            <img src="img/pancadaeamigos.jpg" alt="pancadaeamigos">
+                        </div>
                      </form>
             </section>
         </header>
