--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <a href="index.html">pANcada</a>
+    <header class="cabecalho"> 
+        <h1>pANcada</h1>
         <nav>
             <button>Abrir/fechar menu</button>
             <ul>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <header>
-            <h2>pANcada</h2>
+            <h2>Olá</h2>
             <p>Sou o pANcada e bem-vindo(a) ao meu site!</p>
             <a href="#informacoes">role para ver mais</a>
         </header>
