--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <header>
-            <h2>Olá</h2>
+            <h2>Olá!</h2>
             <p>Sou o pANcada e bem-vindo(a) ao meu site!</p>
             <a href="#informacoes">role para ver mais</a>
         </header>
