--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
             <section>
                 <p>Bryan "pANcada" Luna</p>
                 <img src="img/pancada1.jpg" alt="Pancada">
-                <p>Bryan Luna, 22 anos, conhecido como "pANcada" é um jogador profissional de VALORANT conhecido por atuar na área de controlador. Já jogou VALORANT profissionalmente pelas equipes B4 Esports, Stars Horizon e atualmente atua pela LOUD. <br>Antes do VALORANT, Pancada era jogador profissional de CROSSFIRE, onde competiu profissionalmente pela INTZ e também a BLACK DRAGONS.  </p>
+                <p>Bryan Luna, 22 anos, conhecido como "pANcada" é um jogador profissional de VALORANT conhecido por atuar na área de controlador. Já jogou VALORANT profissionalmente pelas equipes B4 Esports, Stars Horizon e atualmente atua pela LOUD. <br>Antes do VALORANT, Pancada era jogador profissional de CROSSFIRE, onde competiu profissionalmente pelas organizações INTZ e BLACK DRAGONS.  </p>
             </section>
         </article>
     </main>
