--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="cabecalho"> 
-        <h1>pANcada</h1>
+        <h1 class="logo">pANcada</h1>
         <nav>
             <button>Abrir/fechar menu</button>
             <ul>
