--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </main>
     <footer>
         <div>
-            <a href="index.html">pANcada</a>
+            <a href="index.html" class="logo">pANcada</a>
             <p>Jogador profissional de VALORANT for LOUD</p>
             <p>Fique por dentro das atualizações!</p>
             <br />
