--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header class="cabecalho"> 
         <h1 class="logo">pANcada</h1>
-        <nav>
-            <button>Abrir/fechar menu</button>
+        <nav class="menu-principal">
+            <button class="menu-principal__btn">Abrir/fechar menu</button>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre mim</a></li>
