--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1 class="logo">pANcada</h1>
         <nav class="menu-principal">
             <button class="menu-principal__btn">Abrir/fechar menu</button>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre mim</a></li>
-                <li><a href="contato.html">Contato</a></li>
+            <ul class="menu-principal__lista">
+                <li><a class="menu-principal__item menu-principal__item--atual" href="index.html">Home</a></li>
+                <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
+                <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
