--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul>
                     <li><a href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
                     <li><a href="https://Twitter.com/loud_pancada" target="_blank"> Twitter</a></li>
-                    <li><a href="https://Facebook.com/pancadafps" target="_blank">Facebook</a></li>
+                    <li><a href="https://www.youtube.com/channel/UCBZruTQvKbHH6EpPWIULrmw" target="_blank">Youtube</a></li>
                     <li><a href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
                     <li><a href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
                 </ul>
