--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <header>
             <h2>Olá!</h2>
-            <p>Sou o pANcada e bem-vindo(a) ao meu site!</p>
+            <p>Sou o pANcada e bem-vindo(a) ao meu siteAAAAAAA!</p>
             <a href="#informacoes">role para ver mais</a>
         </header>
         <section id="informacoes"><!-- INICIO Section Informações-->
