--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </ul>
             </div>
         <div>
-            2022 - Todos os direitos reservados - Marcos Freire
+            2022 - Todos os direitos reservados - Marcos Freire Copyright ©
         </div>
     </footer>
 </body>
