--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             </section>
         </section><!-- FIM Section Curiosidades-->
     </main>
-    <footer>
+    <footer class="rodape"> 
+        <div class="rodape__linha-1">
         <div>
             <a href="index.html" class="logo">pANcada</a>
             <p>Jogador profissional de VALORANT for LOUD</p>
@@ -74,7 +75,7 @@
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
-        <div>
+        <div class="rodape__linha-2">
             2022 - Todos os direitos reservados - Marcos Freire Copyright ©
         </div>
     </footer>
