--- a/sobre.html
+++ b/sobre.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pANcada</title>
+    <title>pANcada - Sobre mim</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>pANcada</h1>
-        <nav>
-            <button>Abrir/fechar menu</button>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre mim</a></li>
-                <li><a href="contato.html">Contato</a></li>
+    <header class="cabecalho"> 
+        <a href="index.html" class="logo">pANcada</a>
+        <nav class="menu-principal">
+            <button class="menu-principal__btn">Abrir/fechar menu</button>
+            <ul class="menu-principal__lista">
+                <li><a class="menu-principal__item menu-principal__item--atual" href="index.html">Home</a></li>
+                <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
+                <li><a class="menu-principal__item menu-principal__item--atual" href="conquistas.html">Conquistas</a></li>
+                <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
