--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
                 <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
                 <li><a class="menu-principal__item menu-principal__item--atual" href="conquistas.html">Conquistas</a></li>
                 <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
-                
+
             </ul>
         </nav>
     </header>
@@ -48,31 +48,35 @@
             </section>
         </header>
     </main>
-    <footer>
-        <div>
-            <a href="index.html">pANcada</a>
+    <footer class="rodape"> 
+        <div class="rodape__linha-1">
+        <div class="rodape__coluna">
+            <a href="index.html" class="logo logo--branco">pANcada</a>
             <p>Jogador profissional de VALORANT for LOUD</p>
+            <p>Fique por dentro das atualizações!</p>
+            <br />
+            <a class="twitter-timeline" data-width="350" data-height="200" href="https://twitter.com/loud_pancada?ref_src=twsrc%5Etfw">Tweets by loud_pancada</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
-        <div>
-            <h2>Social</h2>
-                <ul>
-                    <li><a href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
-                    <li><a href="https://Twitter.com/loud_pancada" target="_blank"> Twitter</a></li>
-                    <li><a href="https://Facebook.com/pancadafps" target="_blank">Facebook</a></li>
-                    <li><a href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
-                    <li><a href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
+        <div class="">
+            <h2 class="rodape__titulo">Social</h2>
+                <ul class="rodape__lista-links">
+                    <li><a class="rodape__lista-links__item" href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
+                    <li><a class="rodape__lista-links__item" href="https://Twitter.com/loud_pancada" target="_blank">Twitter</a></li>
+                    <li><a class="rodape__lista-links__item" href="https://www.youtube.com/channel/UCBZruTQvKbHH6EpPWIULrmw" target="_blank">Youtube</a></li>
+                    <li><a class="rodape__lista-links__item" href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
+                    <li><a class="rodape__lista-links__item" href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
                 </ul>
             </div>
-            <div>
-                <h2>Links</h2>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre mim</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+            <div class="">
+                <h2 class="rodape__titulo">Links</h2>
+                <ul class="rodape__lista-links">
+                    <li><a class="rodape__lista-links__item" href="index.html">Home</a></li>
+                    <li><a class="rodape__lista-links__item" href="sobre.html">Sobre mim</a></li>
+                    <li><a class="rodape__lista-links__item" href="contato.html">Contato</a></li>
                 </ul>
             </div>
-        <div>
-            2022 - Todos os direitos reservados - Marcos Freire
+        <div class="rodape__linha-2">
+            © 2022 - Todos os direitos reservados - Marcos Freire 
         </div>
     </footer>
 </body>
