--- a/sobre.html
+++ b/sobre.html
@@ -29,7 +29,7 @@
                 <h1 class="pagina-cabecalho__titulo">Sobre mim</h1>
             </header>
             <section class="pagina-conteudo">
-                <p>Bryan "pANcada" Luna</p>
+                <p class="text-center">Bryan "pANcada" Luna</p>
                 <img src="img/pancada1.jpg" alt="Pancada">
                 <p>Bryan Luna, 22 anos, conhecido como "pANcada" é um jogador profissional de VALORANT conhecido por atuar na área de controlador. Já jogou VALORANT profissionalmente pelas equipes B4 Esports, Stars Horizon e atualmente atua pela LOUD. <br>Antes do VALORANT, Pancada era jogador profissional de CROSSFIRE, onde competiu profissionalmente pelas equipes INTZ e BLACK DRAGONS.  </p>
             </section>
