--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
     <title>pANcada - Sobre mim</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-sobre.css">
+    <link rel="stylesheet" href="css/style-pagina.css">
 </head>
 <body>
     <header class="cabecalho"> 
