--- a/contato.html
+++ b/contato.html
@@ -7,9 +7,9 @@
     <title>pANcada</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-pagina.css"
+    <link rel="stylesheet" href="css/style-pagina.css">
     <link rel="stylesheet" href="css/style-contato.css">
-</head>
+   </head>
 <body>
     <header class="cabecalho"> 
         <a href="index.html" class="logo">pANcada</a>
@@ -31,7 +31,7 @@
                 <p class="text-center">Caso queira entrar em contato!</p>
                 <form action="#" class="formulario">
                     <div class="formulario__grupo">
-                        <label class="formulario_label" for="nome">Nome:</label><br>
+                        <label class="formulario__label" for="nome">Nome:</label><br>
                         <input class="formulario__campo" id="nome" type="text" name="nome">
                     </div>
                     <div class="formulario__grupo">
@@ -39,11 +39,11 @@
                     <input class="formulario__campo" id="email" type="text" name="email">                   
                     </div>
                     <div class="formulario__grupo">
-                            <label class="formulario_label" for="mensagem">Mensagem:</label><br>
-                        <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+                            <label class="formulario__label" for="mensagem">Mensagem:</label><br>
+                            <textarea class="formulario__campo" name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
                     </div>
                         <input type="submit" class="formulario__botao" value="Enviar">
-                        <div>
+                        <div class="mapa">
                             <img src="img/pancadaeamigos.jpg" alt="pancadaeamigos">
                         </div>
                      </form>
