--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>pANcada</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-home.css"
 </head>
 <body>
     <header class="cabecalho"> 
@@ -22,10 +23,10 @@
         </nav>
     </header>
     <main>
-        <header>
-            <h2>Olá!</h2>
-            <p>Sou o pANcada e bem-vindo(a) ao meu site!</p>
-            <a href="#informacoes">role para ver mais</a>
+        <header class="cabecalho-home">
+            <h2 class="cabecalho-home__titulo">Olá!</h2>
+            <p class="cabecalho-home__subtitulo">Sou o pANcada e bem-vindo(a) ao meu site!</p>
+            <a class="cabecalho-home__role" href="#informacoes">role para ver mais</a>
         </header>
         <section id="informacoes"><!-- INICIO Section Informações-->
             <h2>INFORMAÇÕES</h2>
