--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>pANcada</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-home.css"
+    <link rel="stylesheet" href="css/style-home.css">
 </head>
 <body>
     <header class="cabecalho"> 
@@ -29,7 +29,7 @@
             <a class="cabecalho-home__role" href="#informacoes">role para ver mais</a>
         </header>
         <section id="informacoes"><!-- INICIO Section Informações-->
-            <h2>INFORMAÇÕES</h2>
+            <h2 class="home__titulo">INFORMAÇÕES</h2>
             <section>
                 <img src="img/loud 2.png" alt="icone loud">
                 <h3>TIME ( LOUD )</h3>
