--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-pagina.css">
     <link rel="stylesheet" href="css/style-contato.css">
+    <link rel="icon" type="image/x-icon" href="/img/P.png">
    </head>
 <body>
     <header class="cabecalho"> 
