--- a/sobre.html
+++ b/sobre.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-pagina.css">
+    <link rel="icon" type="image/x-icon" href="/img/P.png">
 </head>
 <body>
     <header class="cabecalho"> 
