--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         </header>
         <section id="informacoes"><!-- INICIO Section Informações-->
             <h2 class="home__titulo">INFORMAÇÕES</h2>
-            <section>
+            <section class="servico">
                 <img src="img/loud 2.png" alt="icone loud">
-                <h3>TIME ( LOUD )</h3>
+                <h3 class="home__titulo">TIME ( LOUD )</h3>
                 <P>pANcada, Aspas, Sacy, Saadhak e Less</P>
             </section>
-            <section>
+            <section class="servico">
                 <img src="img/calendario2.jpg" alt="calendario">
                 <h3>Tabela de Jogos</h3>
                 <p>★ VCT ★ <br> Nosso próximo jogo é dia xx/xx contra o time: x  às x h <br> Transmissão no canal:<a href="https://twitch.tv/valorant_Br">twitch.tv/valorant_br</a>
@@ -44,7 +44,7 @@
                 </section>
         </section><!-- FIM Section Informações -->
         <section><!-- INICIO Section Curiosidades-->
-            <section>
+            <section class="servico">
                 <h2>Curiosidades</h2>
                 <img src="img/pancada2.jpg" alt="pancada"width="8%" height="8%">
                 <p>Pancada, no valorant, faz a função de controlador, uma das mais escassas e é considerado um dos melhores do país.</p>
