--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
             <p class="cabecalho-home__subtitulo">Sou o pANcada e bem-vindo(a) ao meu site!</p>
             <a class="cabecalho-home__role" href="#informacoes">role para ver mais</a>
         </header>
-        <section id="informacoes"><!-- INICIO Section Informações-->
+        <section id="informacoes" class="servicos"><!-- INICIO Section Informações-->
             <h2 class="home__titulo">INFORMAÇÕES</h2>
-            <section class="servico">
+            <section class="servicos__item">
                 <img src="img/loud 2.png" alt="icone loud">
                 <h3 class="home__titulo">TIME ( LOUD )</h3>
-                <P>pANcada, Aspas, Sacy, Saadhak e Less</P>
+                <P class="servicos__texto">pANcada, Aspas, Sacy, Saadhak e Less</P>
             </section>
-            <section class="servico">
+            <section class="servicos__item">
                 <img src="img/calendario2.jpg" alt="calendario">
-                <h3>Tabela de Jogos</h3>
-                <p>★ VCT ★ <br> Nosso próximo jogo é dia xx/xx contra o time: x  às x h <br> Transmissão no canal:<a href="https://twitch.tv/valorant_Br">twitch.tv/valorant_br</a>
+                <h3 class="home__titulo">Tabela de Jogos</h3>
+                <p class="servicos__texto">★ VCT ★ <br> Nosso próximo jogo é dia xx/xx contra o time: x  às x h <br> Transmissão no canal:<a href="https://twitch.tv/valorant_Br">twitch.tv/valorant_br</a>
                 <valorant_br></valorant_br></a></li></p>
                 </section>
         </section><!-- FIM Section Informações -->
-        <section><!-- INICIO Section Curiosidades-->
-            <section class="servico">
-                <h2>Curiosidades</h2>
-                <img src="img/pancada2.jpg" alt="pancada"width="8%" height="8%">
-                <p>Pancada, no valorant, faz a função de controlador, uma das mais escassas e é considerado um dos melhores do país.</p>
+        <section class="curiosidades"><!-- INICIO Section Curiosidades-->
+            <h2 class="home__titulo home__titulo--branco">Curiosidades</h2>
+            <section class="curiosidades__item">
+                <img class="curiosidades__img" src="img/pancada2.jpg" alt="pancada"width="8%" height="8%">
+                <p class="curiosidades__texto">Pancada, no valorant, faz a função de controlador, uma das mais escassas e é considerado um dos melhores do país.</p>
             </section>
         </section><!-- FIM Section Curiosidades-->
     </main>
