--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
                 </section>
         </section><!-- FIM Section Informações -->
         <section class="curiosidades"><!-- INICIO Section Curiosidades-->
-            <h2 class="home__titulo home__titulo--branco">Curiosidades</h2>
-            <section class="curiosidades__item">
-                <img class="curiosidades__img" src="img/pancada2.jpg" alt="pancada"width="10%" height="10%">
-                <p class="curiosidades__texto">Pancada, no valorant, faz a função de controlador, uma das mais escassas e é considerado um dos melhores do país.</p>
-            </section>
+            <div class="container">
+                <h2 class="home__titulo home__titulo--branco">Curiosidades</h2>
+                <section class="curiosidades__item">
+                    <img class="curiosidades__img" src="img/pancada2.jpg" alt="pancada"width="10%" height="10%">
+                    <p class="curiosidades__texto">Pancada, no valorant, faz a função de controlador, uma das mais escassas e é considerado um dos melhores do país.</p>
+                </section>
+            </div>
         </section><!-- FIM Section Curiosidades-->
     </main>
     <footer class="rodape"> 
