--- a/contato.html
+++ b/contato.html
@@ -9,23 +9,24 @@
     <link rel="icon" type="image/x-icon" href="/img/P.png">
    </head>
 <body>
-    <header class="cabecalho"> 
-        <a href="index.html" class="logo">pANcada</a>
-        <nav class="menu-principal">
-            <button class="menu-principal__btn">Abrir/fechar menu</button>
-            <ul class="menu-principal__lista">
-                <li><a class="menu-principal__item menu-principal__item--atual" href="index.html">Home</a></li>
-                <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
-                <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
-
-            </ul>
-        </nav>
+    <header class="cabecalho">
+        <div class="container">
+            <a href="index.html" class="logo">pANcada</a>
+            <nav class="menu-principal">
+                <button class="menu-principal__btn">Abrir/fechar menu</button>
+                <ul class="menu-principal__lista">
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="index.html">Home</a></li>
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
+                    </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <header class="pagina-cabecalho">
             <h1 class="pagina-cabecalho__titulo">Contato</h1>
         </header>
-            <section class="pagina-conteudo">
+            <section class=" container pagina-conteudo">
                 <p class="text-center">Caso queira entrar em contato!</p>
                 <form action="#" class="formulario">
                     <div class="formulario__grupo">
@@ -41,39 +42,41 @@
                             <textarea class="formulario__campo" name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
                     </div>
                         <input type="submit" class="formulario__botao" value="Enviar">
-                        <div class="mapa">
-                            <img src="img/pancadaeamigos.jpg" alt="pancadaeamigos">
-                        </div>
-                     </form>
-            </section>
+                    </form>
+                </section>
+                <div class="mapa">
+                    <img src="img/pancadaeamigos.jpg" alt="pancadaeamigos">
+                </div>
         </header>
     </main>
     <footer class="rodape"> 
         <div class="rodape__linha-1">
-        <div class="rodape__coluna">
-            <a href="index.html" class="logo logo--branco">pANcada</a>
-            <p>Jogador profissional de VALORANT for LOUD</p>
-            <p>Fique por dentro das atualizações!</p>
-            <br />
-            <a class="twitter-timeline" data-width="350" data-height="200" href="https://twitter.com/loud_pancada?ref_src=twsrc%5Etfw">Tweets by loud_pancada</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        <div class="">
-            <h2 class="rodape__titulo">Social</h2>
-                <ul class="rodape__lista-links">
-                    <li><a class="rodape__lista-links__item" href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://Twitter.com/loud_pancada" target="_blank">Twitter</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://www.youtube.com/channel/UCBZruTQvKbHH6EpPWIULrmw" target="_blank">Youtube</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
-                </ul>
-            </div>
-            <div class="">
-                <h2 class="rodape__titulo">Links</h2>
-                <ul class="rodape__lista-links">
-                    <li><a class="rodape__lista-links__item" href="index.html">Home</a></li>
-                    <li><a class="rodape__lista-links__item" href="sobre.html">Sobre mim</a></li>
-                    <li><a class="rodape__lista-links__item" href="contato.html">Contato</a></li>
-                </ul>
+            <div class="container">
+                <div class="rodape__coluna">
+                    <a href="index.html" class="logo logo--branco">pANcada</a>
+                    <p>Jogador profissional de VALORANT for LOUD</p>
+                    <p>Fique por dentro das atualizações!</p>
+                    <br />
+                    <a class="twitter-timeline" data-width="350" data-height="200" href="https://twitter.com/loud_pancada?ref_src=twsrc%5Etfw">Tweets by loud_pancada</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <div class="">
+                    <h2 class="rodape__titulo">Social</h2>
+                        <ul class="rodape__lista-links">
+                            <li><a class="rodape__lista-links__item" href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://Twitter.com/loud_pancada" target="_blank">Twitter</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://www.youtube.com/channel/UCBZruTQvKbHH6EpPWIULrmw" target="_blank">Youtube</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
+                        </ul>
+                    </div>
+                    <div class="">
+                        <h2 class="rodape__titulo">Links</h2>
+                        <ul class="rodape__lista-links">
+                            <li><a class="rodape__lista-links__item" href="index.html">Home</a></li>
+                            <li><a class="rodape__lista-links__item" href="sobre.html">Sobre mim</a></li>
+                            <li><a class="rodape__lista-links__item" href="contato.html">Contato</a></li>
+                        </ul>
+                    </div>
             </div>
         <div class="rodape__linha-2">
             © 2022 - Todos os direitos reservados - Marcos Freire 
