--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 <body>
     <header class="cabecalho"> 
-        <h1 class="logo">pANcada</h1>
-        <nav class="menu-principal">
-            <button class="menu-principal__btn">Abrir/fechar menu</button>
-            <ul class="menu-principal__lista">
-                <li><a class="menu-principal__item menu-principal__item--atual" href="index.html">Home</a></li>
-                <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
-                <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
-                
-            </ul>
-        </nav>
+        <div class="container">
+            <h1 class="logo">pANcada</h1>
+            <nav class="menu-principal">
+                <button class="menu-principal__btn">Abrir/fechar menu</button>
+                <ul class="menu-principal__lista">
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="index.html">Home</a></li>
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <header class="cabecalho-home">
@@ -35,11 +36,13 @@
                 <P class="servicos__texto">pANcada, Aspas, Sacy, Saadhak e Less</P>
             </section>
             <section class="servicos__item">
-                <img src="img/calendario2.jpg" alt="calendario">
-                <h3 class="home__titulo">Tabela de Jogos</h3>
-                <p class="servicos__texto">★ VCT ★ <br> Nosso próximo jogo é dia xx/xx contra o time: x  às x h <br> Transmissão no canal:<a href="https://twitch.tv/valorant_Br">twitch.tv/valorant_br</a>
-                <valorant_br></valorant_br></a></li></p>
+                <div class="container">
+                    <img src="img/calendario2.jpg" alt="calendario">
+                    <h3 class="home__titulo">Tabela de Jogos</h3>
+                    <p class="servicos__texto">★ VCT ★ <br> Nosso próximo jogo é dia xx/xx contra o time: x  às x h <br> Transmissão no canal:<a href="https://twitch.tv/valorant_Br">twitch.tv/valorant_br</a>
+                    <valorant_br></valorant_br></a></li></p>
                 </section>
+                </div>
         </section><!-- FIM Section Informações -->
         <section class="curiosidades"><!-- INICIO Section Curiosidades-->
             <div class="container">
@@ -53,30 +56,32 @@
     </main>
     <footer class="rodape"> 
         <div class="rodape__linha-1">
-        <div class="rodape__coluna">
-            <a href="index.html" class="logo logo--branco">pANcada</a>
-            <p>Jogador profissional de VALORANT for LOUD</p>
-            <p>Fique por dentro das atualizações!</p>
-            <br />
-            <a class="twitter-timeline" data-width="350" data-height="200" href="https://twitter.com/loud_pancada?ref_src=twsrc%5Etfw">Tweets by loud_pancada</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        <div class="">
-            <h2 class="rodape__titulo">Social</h2>
-                <ul class="rodape__lista-links">
-                    <li><a class="rodape__lista-links__item" href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://Twitter.com/loud_pancada" target="_blank">Twitter</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://www.youtube.com/channel/UCBZruTQvKbHH6EpPWIULrmw" target="_blank">Youtube</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
-                </ul>
-            </div>
-            <div class="">
-                <h2 class="rodape__titulo">Links</h2>
-                <ul class="rodape__lista-links">
-                    <li><a class="rodape__lista-links__item" href="index.html">Home</a></li>
-                    <li><a class="rodape__lista-links__item" href="sobre.html">Sobre mim</a></li>
-                    <li><a class="rodape__lista-links__item" href="contato.html">Contato</a></li>
-                </ul>
+            <div class="container">
+                <div class="rodape__coluna">
+                    <a href="index.html" class="logo logo--branco">pANcada</a>
+                    <p>Jogador profissional de VALORANT for LOUD</p>
+                    <p>Fique por dentro das atualizações!</p>
+                    <br />
+                    <a class="twitter-timeline" data-width="350" data-height="200" href="https://twitter.com/loud_pancada?ref_src=twsrc%5Etfw">Tweets by loud_pancada</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <div class="">
+                    <h2 class="rodape__titulo">Social</h2>
+                        <ul class="rodape__lista-links">
+                            <li><a class="rodape__lista-links__item" href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://Twitter.com/loud_pancada" target="_blank">Twitter</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://www.youtube.com/channel/UCBZruTQvKbHH6EpPWIULrmw" target="_blank">Youtube</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
+                        </ul>
+                    </div>
+                    <div class="">
+                        <h2 class="rodape__titulo">Links</h2>
+                        <ul class="rodape__lista-links">
+                            <li><a class="rodape__lista-links__item" href="index.html">Home</a></li>
+                            <li><a class="rodape__lista-links__item" href="sobre.html">Sobre mim</a></li>
+                            <li><a class="rodape__lista-links__item" href="contato.html">Contato</a></li>
+                        </ul>
+                    </div>
             </div>
         <div class="rodape__linha-2">
             © 2022 - Todos os direitos reservados - Marcos Freire 
