--- a/sobre.html
+++ b/sobre.html
@@ -9,24 +9,25 @@
     <link rel="icon" type="image/x-icon" href="/img/P.png">
 </head>
 <body>
-    <header class="cabecalho"> 
-        <a href="index.html" class="logo">pANcada</a>
-        <nav class="menu-principal">
-            <button class="menu-principal__btn">Abrir/fechar menu</button>
-            <ul class="menu-principal__lista">
-                <li><a class="menu-principal__item menu-principal__item--atual" href="index.html">Home</a></li>
-                <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
-                <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
-
-            </ul>
-        </nav>
+    <header class="cabecalho">
+        <div class="container">
+            <a href="index.html" class="logo">pANcada</a>
+            <nav class="menu-principal">
+                <button class="menu-principal__btn">Abrir/fechar menu</button>
+                <ul class="menu-principal__lista">
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="index.html">Home</a></li>
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="sobre.html">Sobre mim</a></li>
+                    <li><a class="menu-principal__item menu-principal__item--atual" href="contato.html">Contato</a></li>
+               </ul>
+            </nav>
+        </div> 
     </header>
     <main>
         <article>
             <header class="pagina-cabecalho">
                 <h1 class="pagina-cabecalho__titulo">Sobre mim</h1>
             </header>
-            <section class="pagina-conteudo">
+            <section class="container pagina-conteudo">
                 <p class="text-center">Bryan "pANcada" Luna</p>
                 <img src="img/pancada1.jpg" alt="Pancada">
                 <p>Bryan Luna, 22 anos, conhecido como "pANcada" é um jogador profissional de VALORANT conhecido por atuar na área de controlador. Já jogou VALORANT profissionalmente pelas equipes B4 Esports, Stars Horizon e atualmente atua pela LOUD. <br>Antes do VALORANT, Pancada era jogador profissional de CROSSFIRE, onde competiu profissionalmente pelas equipes INTZ e BLACK DRAGONS.  </p>
@@ -35,30 +36,32 @@
     </main>
     <footer class="rodape"> 
         <div class="rodape__linha-1">
-        <div class="rodape__coluna">
-            <a href="index.html" class="logo logo--branco">pANcada</a>
-            <p>Jogador profissional de VALORANT for LOUD</p>
-            <p>Fique por dentro das atualizações!</p>
-            <br />
-            <a class="twitter-timeline" data-width="350" data-height="200" href="https://twitter.com/loud_pancada?ref_src=twsrc%5Etfw">Tweets by loud_pancada</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        <div class="">
-            <h2 class="rodape__titulo">Social</h2>
-                <ul class="rodape__lista-links">
-                    <li><a class="rodape__lista-links__item" href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://Twitter.com/loud_pancada" target="_blank">Twitter</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://www.youtube.com/channel/UCBZruTQvKbHH6EpPWIULrmw" target="_blank">Youtube</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
-                    <li><a class="rodape__lista-links__item" href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
-                </ul>
-            </div>
-            <div class="">
-                <h2 class="rodape__titulo">Links</h2>
-                <ul class="rodape__lista-links">
-                    <li><a class="rodape__lista-links__item" href="index.html">Home</a></li>
-                    <li><a class="rodape__lista-links__item" href="sobre.html">Sobre mim</a></li>
-                    <li><a class="rodape__lista-links__item" href="contato.html">Contato</a></li>
-                </ul>
+            <div class="container">
+                <div class="rodape__coluna">
+                    <a href="index.html" class="logo logo--branco">pANcada</a>
+                    <p>Jogador profissional de VALORANT for LOUD</p>
+                    <p>Fique por dentro das atualizações!</p>
+                    <br />
+                    <a class="twitter-timeline" data-width="350" data-height="200" href="https://twitter.com/loud_pancada?ref_src=twsrc%5Etfw">Tweets by loud_pancada</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <div class="">
+                    <h2 class="rodape__titulo">Social</h2>
+                        <ul class="rodape__lista-links">
+                            <li><a class="rodape__lista-links__item" href="https://instagram.com/pancadafps" target="_blank">Instagram</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://Twitter.com/loud_pancada" target="_blank">Twitter</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://www.youtube.com/channel/UCBZruTQvKbHH6EpPWIULrmw" target="_blank">Youtube</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://Tiktok.com/@loud_pancada" target="_blank">Tiktok</a></li>
+                            <li><a class="rodape__lista-links__item" href="https://twitch.tv/pancadalv" target="_blank">Twitch</a></li>
+                        </ul>
+                    </div>
+                    <div class="">
+                        <h2 class="rodape__titulo">Links</h2>
+                        <ul class="rodape__lista-links">
+                            <li><a class="rodape__lista-links__item" href="index.html">Home</a></li>
+                            <li><a class="rodape__lista-links__item" href="sobre.html">Sobre mim</a></li>
+                            <li><a class="rodape__lista-links__item" href="contato.html">Contato</a></li>
+                        </ul>
+                    </div>
             </div>
         <div class="rodape__linha-2">
             © 2022 - Todos os direitos reservados - Marcos Freire 
